<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    tools:context=".TransactionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/transaction_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:minHeight="?android:attr/actionBarSize"
        android:textColor="#000000"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/transaction_toolbar_title"
            android:textColor="#000000" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/transaction_scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:paddingBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_toolbar"
        app:layout_constraintBottom_toTopOf="@+id/start_btn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnTransactionType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/home_screen_button"
                android:drawableLeft="@drawable/ic_file_logo"
                android:drawableRight="@drawable/ic_check_line"
                android:drawablePadding="10dp"
                android:paddingVertical="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Transaction Type"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnInvokingMethod"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/home_screen_button"
                android:drawableLeft="@drawable/ic_link"
                android:drawableRight="@drawable/ic_check_line"
                android:drawablePadding="10dp"
                android:paddingVertical="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Invoking Method"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnTransactionType" />

            <EditText
                android:id="@+id/request_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="40dp"
                android:hint="@string/requests_name_hint"
                android:textColorHint="#808080"
                android:inputType="none"
                android:enabled="false"
                android:textColor="#000000"
                android:background="@drawable/edit_text_border_grey"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/btnInvokingMethod"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/divider_1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:background="#EAEAEA"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/request_name_et" />

            <EditText
                android:id="@+id/request_amount_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:hint="@string/requests_amount_hint"
                android:textColorHint="#808080"
                android:inputType="none"
                android:enabled="false"
                android:textColor="#000000"
                android:background="@drawable/edit_text_border_grey"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/divider_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/request_reference_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:hint="@string/requests_reference_hint"
                android:textColorHint="#808080"
                android:inputType="none"
                android:enabled="false"
                android:textColor="#000000"
                android:background="@drawable/edit_text_border_grey"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/request_amount_et"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/request_acc_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:hint="@string/requests_account_number_hint"
                android:textColorHint="#808080"
                android:inputType="none"
                android:enabled="false"
                android:textColor="#000000"
                android:background="@drawable/edit_text_border_grey"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/request_reference_et"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/request_id_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:hint="@string/requests_id_number_hint"
                android:textColorHint="#808080"
                android:inputType="none"
                android:enabled="false"
                android:textColor="#000000"
                android:background="@drawable/edit_text_border_grey"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/request_acc_number_et"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/request_max_collection_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:hint="@string/requests_max_coll_hint"
                android:textColorHint="#808080"
                android:inputType="none"
                android:enabled="false"
                android:textColor="#000000"
                android:background="@drawable/edit_text_border_grey"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/request_id_number_et"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/request_debit_order_day_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:hint="@string/requests_debit_order_day_hint"
                android:textColorHint="#808080"
                android:inputType="none"
                android:enabled="false"
                android:textColor="#000000"
                android:background="@drawable/edit_text_border_grey"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/request_max_collection_et"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/request_creditor_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:hint="@string/requests_creditor_hint"
                android:textColorHint="#808080"
                android:inputType="none"
                android:enabled="false"
                android:textColor="#000000"
                android:background="@drawable/edit_text_border_grey"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/request_debit_order_day_et"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/request_contract_reference_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:hint="@string/requests_contract_reference_hint"
                android:textColorHint="#808080"
                android:inputType="none"
                android:enabled="false"
                android:textColor="#000000"
                android:background="@drawable/edit_text_border_grey"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/request_creditor_et"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/request_instalment_amount_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:hint="@string/requests_instalment_amount_hint"
                android:textColorHint="#808080"
                android:inputType="none"
                android:enabled="false"
                android:textColor="#000000"
                android:background="@drawable/edit_text_border_grey"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/request_contract_reference_et"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/request_instalment_visibility_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:hint="@string/requests_instalment_visibility_hint"
                android:textColorHint="#808080"
                android:inputType="none"
                android:enabled="false"
                android:textColor="#000000"
                android:background="@drawable/edit_text_border_grey"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/request_instalment_amount_et"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/start_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/gradient_button"
        android:text="@string/transaction_start_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cancel_btn" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:text="@string/transaction_cancel_button"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="?android:attr/borderlessButtonStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>
